# iai_hsr

./: .gitmodules  README.md
hsr_navigation/: CMakeLists.txt  package.xml
hsr_navigation/launch/: hsr_amcl.launch  hsr_map.launch  hsr_map_and_snap_map.launch  hsr_snap_map_only.launch
hsr_navigation/map/: apartment_lab_hsr.yaml  apartment_lab_hsr_clean.yaml  final.pgm  final.yaml  firstMap.pgm  firstMap.yaml  hsr_lab_map7.yaml  lab_map.yaml  lab_map_8.yaml  lend_hsr.yaml  map1.yaml  robocup_arena_1.yaml  robocup_arena_bar.pgm  robocup_arena_bar.yaml  robocup_arena_bar_closed_doors.pgm  robocup_arena_bar_closed_doors.yaml  robocup_arena_bar_extra_walls.pgm  robocup_arena_bar_extra_walls.xcf  robocup_arena_bar_extra_walls.yaml  robocup_arena_bar_extra_walls2.pgm  robocup_arena_bar_extra_walls2.yaml  robocup_arena_bar_walls.pgm  robocup_arena_bar_walls.yaml  robocup_arena_living_room.pgm  robocup_arena_living_room.yaml  robocup_training_1_edited.pgm  robocup_training_1_edited.yaml
hsr_navigation/src/: global_pose_publisher.py
hsr_velocity_controller/: CMakeLists.txt  README.md  package.xml
hsr_velocity_controller/config/: my_controller_realtime_test.yaml
hsr_velocity_controller/launch/: switch_to_velocity_controllers.launch.py
hsr_velocity_controller/src/: hsr_velocity_controller.cpp
iai_hsr_bringup/: CMakeLists.txt  package.xml
iai_hsr_bringup/launch/: hsr.launch  hsr.launch.py
