<?xml version="1.0"?>
<package format="2">
  <name>hsr_navigation</name>
  <version>0.0.0</version>
  <description>The hsr_navigation package</description>

  <maintainer email="arthur@todo.todo">arthur</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
