<?xml version="1.0"?>
<package format="3">
  <name>iai_hsr_bringup</name>
  <version>0.0.0</version>
  <description>The iai_hsr_bringup package</description>

  <maintainer email="toya@todo.todo">toya</maintainer>

  <license>TODO</license>

  <!-- Dependencies for ROS2 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <!-- The build tool is ament_cmake for ROS2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for ROS2 message generation -->
  <exec_depend>rosidl_default_runtime</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
